cabal-version:   3.8
name:            clb
version:         1.0.0
build-type:      Simple
extra-doc-files: README.md
license:         MIT
maintainer:      ilia@mlabs.city
author:          Ilia Rodionov, Gregory Gerasev, George Flerovsky
synopsis:
  The Cardano emulator that just works AKA Cardano Ledger Backend (CLB),
  pronounced /klʌb/.

tested-with:     GHC ==9.6.5

source-repository head
  type:     git
  location: https://github.com/mlabs-haskell/clb

flag force-recomp
  description: Compile with -fforce-recomp and -Wunused-packages
  default:     False

common common-lang
  ghc-options:        -Wall -Wincomplete-uni-patterns
  ghc-options:        -fno-show-valid-hole-fits
  default-language:   GHC2021
  default-extensions:
    DataKinds
    DeriveAnyClass
    DerivingStrategies
    DerivingVia
    GADTs
    LambdaCase
    MultiWayIf
    OverloadedStrings
    RecordWildCards
    RoleAnnotations
    TemplateHaskell
    TypeFamilies
    UndecidableInstances
    ViewPatterns

  if flag(force-recomp)
    ghc-options: -fforce-recomp -Wunused-packages

library
  import:          common-lang
  exposed-modules:
    Clb
    Clb.ClbLedgerState
    Clb.MockConfig
    Clb.TimeSlot

  other-modules:
    Clb.Era
    Clb.Params
    Clb.Tx

  build-depends:
    , base               ^>=4.18.0
    , base16-bytestring
    , bytestring
    , containers
    , data-default
    , lens
    , mtl
    , prettyprinter
    , text
    , time
    , transformers

  build-depends:
    , cardano-api:{cardano-api, internal}                 >=8.38.0.0
    , cardano-binary
    , cardano-crypto-class
    , cardano-ledger-alonzo
    , cardano-ledger-api
    , cardano-ledger-babbage
    , cardano-ledger-binary
    , cardano-ledger-core:{cardano-ledger-core, testlib}
    , cardano-ledger-mary
    , cardano-ledger-shelley
    , cardano-slotting
    , ouroboros-consensus-cardano
    , plutus-core
    , plutus-ledger-api
    , plutus-tx
    , pretty-show
    , small-steps

  hs-source-dirs:  src

executable smoke-test
  import:           common-lang
  ghc-options:      -threaded -rtsopts
  main-is:          smoke-test.hs
  build-depends:
    , base
    , cardano-api:{cardano-api, internal}
    , clb
    , prettyprinter

  hs-source-dirs:   test/smoke
  other-modules:
  default-language: GHC2021
