cabal-version:   3.8
name:            clb
version:         1.0.0
build-type:      Simple
extra-doc-files: README.md
license:         MIT
maintainer:      ilia@mlabs.city
author:          Ilia Rodionov, Gregory Gerasev, George Flerovsky
synopsis:
  The Cardano emulator that just works AKA Cardano Ledger Backend (CLB),
  pronounced /klʌb/.

tested-with:     GHC ==9.6.3

source-repository head
  type:     git
  location: https://github.com/mlabs-haskell/clb

flag force-recomp
  description: Compile with -fforce-recomp and -Wunused-packages
  default:     False

common common-lang
  ghc-options:        -Wall -Wincomplete-uni-patterns
  ghc-options:        -fno-show-valid-hole-fits
  default-language:   GHC2021
  default-extensions:
    DataKinds
    DeriveAnyClass
    DerivingStrategies
    DerivingVia
    GADTs
    LambdaCase
    MultiWayIf
    OverloadedStrings
    RecordWildCards
    RoleAnnotations
    TemplateHaskell
    TypeFamilies
    UndecidableInstances
    ViewPatterns

  if flag(force-recomp)
    ghc-options: -fforce-recomp -Wunused-packages

library
  import:          common-lang
  exposed-modules:
    Clb
    Clb.ClbLedgerState
    Clb.MockConfig
    Clb.TimeSlot

  other-modules:
    Clb.Era
    Clb.Params
    Clb.Tx

  build-depends:
    , base               ^>=4.18.2
    , base16-bytestring  ^>=1.0.2
    , bytestring         ^>=0.11.5
    , containers         ^>=0.6.7
    , data-default       ^>=0.7.1
    , lens               ^>=5.2.3
    , mtl                ^>=2.3.1
    , prettyprinter      ^>=1.7.1
    , text               ^>=2.0.2
    , time               ^>=1.12.2
    , transformers       ^>=0.6.1

  build-depends:
    , cardano-api:{cardano-api, internal}                 ^>=9.1.0.0
    , cardano-binary
    , cardano-crypto-class                                ^>=2.1.5.0
    , cardano-ledger-alonzo                               ^>=1.10.0.0
    , cardano-ledger-api                                  ^>=1.9.2.1
    , cardano-ledger-babbage
    , cardano-ledger-binary                               ^>=1.3.3.0
    , cardano-ledger-conway                               ^>=1.16.0.0
    , cardano-ledger-core:{cardano-ledger-core, testlib}  ^>=1.13.2.0
    , cardano-ledger-mary
    , cardano-ledger-shelley                              ^>=1.12.2.0
    , cardano-slotting                                    ^>=0.2.0.0
    , plutus-core                                         ^>=1.30.0.0
    , plutus-ledger-api                                   ^>=1.30.0.0
    , plutus-tx                                           ^>=1.30.0.0
    , pretty-show
    , small-steps

  hs-source-dirs:  src

executable smoke-test
  import:           common-lang
  ghc-options:      -threaded -rtsopts
  main-is:          smoke-test.hs
  build-depends:
    , base                                 ^>=4.18.2
    , cardano-api:{cardano-api, internal}  ^>=9.1.0.0
    , cardano-ledger-core                  ^>=1.13.2.0
    , clb
    , prettyprinter                        ^>=1.7.1

  hs-source-dirs:   test/smoke
  other-modules:
  default-language: GHC2021
