cabal-version:   3.8
name:            clb
version:         1.0.0
build-type:      Simple
extra-doc-files: README.md
license:         MIT
maintainer:      ilia@mlabs.city
author:
  , Ilia Rodionov
  , George Flerovsky
  , Rajdeep Maity
  , Gregory Gerasev

synopsis:
  The Cardano emulator that "just works" AKA Cardano Ledger Backend (CLB),
  pronounced /klʌb/.  A new gen of PSM.

tested-with:     GHC ==9.6.6

source-repository head
  type:     git
  location: https://github.com/mlabs-haskell/clb

flag force-recomp
  description: Compile with -fforce-recomp and -Wunused-packages
  default:     False

common common-lang
  ghc-options:        -Wall -Wincomplete-uni-patterns
  ghc-options:        -fno-show-valid-hole-fits
  default-language:   GHC2021
  default-extensions:
    DataKinds
    DeriveAnyClass
    DerivingStrategies
    DerivingVia
    GADTs
    LambdaCase
    MultiWayIf
    OverloadedStrings
    RecordWildCards
    RoleAnnotations
    TemplateHaskell
    TypeFamilies
    UndecidableInstances
    ViewPatterns

  if flag(force-recomp)
    ghc-options: -fforce-recomp -Wunused-packages

library
  import:          common-lang
  exposed-modules:
    Clb
    Clb.Config
    Clb.EmulatedLedgerState
    Clb.Era
    Clb.Params
    Clb.TimeSlot
    Clb.Tx

  other-modules:
  build-depends:
    , base           ^>=4.18.0
    , containers
    , data-default
    , lens
    , mtl
    , prettyprinter
    , serialise
    , text
    , time

  build-depends:
    , cardano-api:{cardano-api, internal}                 >=10.1 && <11
    , cardano-binary
    , cardano-crypto-class
    , cardano-data
    , cardano-ledger-alonzo
    , cardano-ledger-api
    , cardano-ledger-babbage
    , cardano-ledger-conway
    , cardano-ledger-core:{cardano-ledger-core, testlib}
    , cardano-ledger-mary
    , cardano-ledger-shelley
    , cardano-slotting
    , cardano-strict-containers
    , plutus-ledger-api
    , plutus-tx
    , pretty-show
    , small-steps

  hs-source-dirs:  src

executable smoke-test
  import:           common-lang
  ghc-options:      -threaded -rtsopts
  main-is:          smoke-test.hs
  build-depends:
    , base
    , cardano-api:{cardano-api, internal}
    , cardano-ledger-core
    , clb
    , prettyprinter

  hs-source-dirs:   test/smoke
  other-modules:
  default-language: GHC2021
